src/test/ui/rfc-2632-const-trait-impl/tilde-const-invalid-places.stderr
error: `~const` and `?` are mutually exclusive
  --> $DIR/tilde-const-invalid-places.rs:5:25
   |
LL | struct TildeQuestion<T: ~const ?Sized>(std::marker::PhantomData<T>);
   |                         ^^^^^^^^^^^^^

error: aborting due to previous error

